PacketrisModel.javaのキュー、pushをpopに訂正 PlayForm.javaにcurrentMinosの更新メソッド、10個のMinosをはじめから装填するようにした。 動きます。